# htup

./: .gitignore  BUILD.bazel  CMakeLists.txt  MODULE.bazel  Package.resolved  Package.swift  README.md  WORKSPACE.bazel  build.zig  build.zig.zon  go.mod  go.sum  go.work.sum  swift.Dockerfile
.fleet/: run.json
.github/: SECURITY.md  dependabot.yml
.github/workflows/: docker.yml  go.yml
doc/: documentation.md  tools.md
lib/: BUILD.bazel  Main.swift  apt_update.c  main.c  main.cc  main.zig  update_ubuntu.c
lib/src/command/: dart_integration.go  flag_validation.go  flutter_integration.go  go_integration.go
local_workflow_swift/: Package.resolved  Package.swift
local_workflow_swift/test/: CLITest.swift
src/: apt_update.c  argument_parsing.c  argument_parsing.h  documentation.c  documentation.h  main.c  main.zig  program_status.h  system_update.h  system_upgrade.c  system_upgrade.h
test/: CLITest.swift
