load(
    "@io_bazel_rules_go//go:def.bzl", 
    "go_binary",
)

go_binary(
    deps = [
        ":lib",
    ],
    goarch = amd64
    goos = darwin 
    name = "darwin_amd64",
    out = "bin/darwin/amd64/htwork_darwin_amd64",
    pure = "on",
    srcs = ["lib/**"],
)

go_binary(
    deps = [
        ":lib",
    ],
    goarch = arm64
    goos = darwin 
    name = "darwin_arm64",
    out = "bin/darwin/arm64/htwork_darwin_arm64",
    pure = "on",
    srcs = ["lib/**"],
)

go_binary(
    deps = [
        ":lib",
    ],
    goarch = amd64
    goos = linux 
    name = "linux_amd64",
    out = "bin/linux/amd64/htwork_linux_amd64",
    pure = "on",
    srcs = ["lib/**"],
)

go_binary(
    deps = [
        ":lib",
    ],
    goarch = arm64
    goos = linux 
    name = "linux_arm64",
    out = "bin/linux/arm64/htwork_linux_arm64",
    pure = "on",
    srcs = ["lib/**"],
)

go_binary(
    deps = [
        ":lib",
    ],
    goarch = amd64
    goos = windows 
    name = "windows_amd64",
    out = "bin/windows/amd64/htwork_windows_amd64",
    pure = "on",
    srcs = ["lib/**"],
)

go_binary(
    deps = [
        ":lib",
    ],
    goarch = arm64
    goos = windows 
    name = "windows_arm64",
    out = "bin/windows/arm64/htwork_windows_arm64",
    pure = "on",
    srcs = ["lib/**"],
)