"Bazel Dependencies"
load(
    "@bazel_gazelle//:deps.bzl",
)
load(
    "@gazelle//:def.bzl", 
    "gazelle",
)

module(name = "local_workflow")

bazel_dep(name = "rules_go", version = "0.39.1")
bazel_dep(name = "gazelle", version = "0.31.0")

gazelle(name = "local_workflow")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")

go_sdk.host()

use_repo(
    go_deps,
    "com_github_hashicorp_hcl_v2",
    "com_github_hashicorp_hil",
)
