"Bazel Dependencies"

module(name = "local_workflow_module")

bazel_dep(
    name = "rules_go", 
    version = "0.46.0",
)
bazel_dep(
    name = "gazelle", 
    version = "0.35.0",
)

go_deps = use_extension(
    "@gazelle//:extensions.bzl", 
    "go_deps",
)

go_deps.from_file(go_mod = "//:go.mod")

go_sdk = use_extension(
    "@rules_go//go:extensions.bzl", 
    "go_sdk",
)

go_sdk.host()

use_repo(
    go_deps,
    "com_github_hashicorp_hcl_v2",
)
