load(
    "@io_bazel_rules_go//go:def.bzl", 
    "go_library",
)

go_library(
    deps = [
        "@com_github_hashicorp_hcl_v2",
        "@com_github_hashicorp_hil",
    ],
    importpath = "local_workflow/lib",
    name = "lib",
    srcs = [
        "*.go",
        "src/**/*.go",
    ],
    visibility = ["//visibility:public"],
)